try fix logo not showing

--- a/phone.css
+++ b/phone.css
@@ -17,9 +17,6 @@
     border-top-right-radius: 0rem;
 }
 
-.img{
-    height: 2.6rem;
-}
 p{
     margin-bottom: 0.7rem;
     padding-right: 0.5rem;
